--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
     "nodemon": "^2.0.20",
+    "qrcode": "^1.5.1",
     "qrcode-reader": "^1.0.4"
   }
 }
