--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cloudinary": "^1.34.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "jimp": "^0.22.4",
+    "jsbarcode": "^3.11.5",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
     "nodemon": "^2.0.20",
