--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "express-validation": "^4.1.0",
     "express-validator": "^6.15.0",
     "jimp": "^0.22.4",
     "jsbarcode": "^3.11.5",
@@ -27,6 +28,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "qrcode": "^1.5.1",
-    "qrcode-reader": "^1.0.4"
+    "qrcode-reader": "^1.0.4",
+    "validatorjs": "^3.22.1"
   }
 }
